blue-green-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: blue-green-gw
  namespace: maru-blue-green
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-blue-green
      protocol: HTTP
    hosts:
    - "maru-blue-green.bobcat.devsisters.cloud"
