green-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: green
spec:
  hosts:
  - "maru-blue-green.bobcat.devsisters.cloud"
  gateways:
  - blue-green-gw
  http:
  - route:
    - destination:
        host: green
        port:
          number: 8080
      weight: 50
    - destination:
        host: blue
        port:
          number: 8080
      weight: 50
